Contrast fix for style guide color swatch

--- a/css/index.css
+++ b/css/index.css
@@ -1083,7 +1083,7 @@ div.box.vivid_blue {
 div.box.green {
   background-color: #1db954;
   box-shadow: #c2c2c2 2px 3px 5px;
-  color: #fff;
+  color: #000;
 }
 
 div.box.mtndew_green {
